fix: Nav links gap

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ ul {
     font-size: 18px;
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 18px;
 }
 
 .logo {
